# test

./: Dockerfile  LICENSE  app.py  fast_api.py  preprocess.py  pyproject.toml  req.py  req2.py  req3.py  requirements.txt  sample_cust_input.json  test_ch_12.ipynb  train.py
data/: synth_customer_churn.csv
json/: batch.json
models/: preprocessor.joblib  stack_class_pipe_new.joblib
pipeline/: binner.py
